# SlimNet

./: README.md  compressed_model.pt  pyproject.toml  run1.py  run2.py  run3.py  run4.py  run_full.py
slimnet/: __init__.py  cli.py  configs.py
slimnet/core/: __init__.py  benchmark.py  pipeline.py  planner.py
slimnet/examples/: resnet50_t4.py
slimnet/techniques/: distillation.py  low_rank.py  pruning.py  quantization.py
tests/: test_distillation.py  test_low_rank.py  test_pruning.py
