[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "slimnet"
version = "0.1.0"
description = "Model compression library for PyTorch — prune, quantize, factorize, distill in one call"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SlimNet Authors" }]
keywords = ["pytorch", "model-compression", "pruning", "quantization", "knowledge-distillation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "torchvision>=0.15"]

[project.scripts]
slimnet = "slimnet.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["slimnet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=slimnet --cov-report=term-missing -v"

[tool.coverage.run]
source = ["slimnet"]
omit = ["tests/*", "examples/*", "benchmarks/*"]